quick fix for the navbar stretching the page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,7 +21,7 @@ h1{
 {
     padding-top:10px;
     position: absolute;
-    width: 100%;
+    width: 95%;
     left: 0;
     text-align: center;
     margin: auto;
